<resources>
    <string name="app_name">StocksApp</string>
    <string name="stocks">Stocks</string>
    <string name="favourite">Favourite</string>
    <string name="search_title">searchTitle</string>
    <string name="hint_edit_text">Find company or ticker</string>
    <string name="popular_requests">Popular requests</string>
    <string name="you_ve_searched_for_this">You’ve searched for this</string>
    <string name="retry">Retry</string>
    <string name="check_internet">Check your internet connection!</string>
    <string name="timeout">TimeoutException</string>
    <string name="there_is_no_data_to_display_the_graph">There is no data to display the graph 😨</string>
    <string name="price">Price</string>
    <string name="time">Time</string>
    <string name="successful_purchase">Successful purchase</string>
    <string name="chart">Chart</string>
    <string name="news">News</string>
    <string name="cats">Cats</string>
    <string name="i_have_no_news_for_this_company">I have no news for this company 😨</string>
    <string name="company_profile">Company profile</string>
    <string name="description_for_company">Apple Inc. is an American multinational technology company headquartered in Cupertino, California, that designs, develops, and sells consumer electronics, computer software, and online services. It is considered one of the Big Four technology companies, alongside Amazon, Google, and Microsoft. The company\'s hardware products include the iPhone smartphone, the iPad tablet computer, the Mac personal computer, the iPod portable media player, the Apple Watch smartwatch, the Apple TV digital media player, the AirPods wireless earbuds and the HomePod smart speaker. Apple\'s software includes the macOS, iOS, iPadOS, watchOS, and tvOS operating systems, the iTunes media player, the Safari web browser, the Shazam acoustic fingerprint utility, and the iLife and iWork creativity and productivity suites, as well as professional applications like Final Cut Pro, Logic Pro, and Xcode. Its online services include the iTunes Store, the iOS App Store, Mac App Store, Apple Music, Apple TV+, iMessage, and iCloud. Other services include Apple Store, Genius Bar, AppleCare, Apple Pay, Apple Pay Cash, and Apple Card.</string>
    <string name="web_url_text">https://www.apple.com/</string>
    <string name="no_information_for_this_company">No information for this company 😨</string>
    <string name="stock_candles_for">Stock candles for last month</string>
    <string name="d">D</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="y">Y</string>
    <string name="cats_for_arthur">Cats for Arthur =)</string>
    <string name="another">Another</string>
</resources>