<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/chart_price_textSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/graph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$131.93" />

        <TextView
            android:id="@+id/change_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/green"
            android:textSize="@dimen/chart_change_textSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/graph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price"
            tools:text="+$0.12 (1.15%)" />

        <TextView
            android:id="@+id/no_data_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/there_is_no_data_to_display_the_graph"
            android:textColor="@color/black"
            android:textSize="@dimen/no_data_text_size"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/graph"
            app:layout_constraintEnd_toEndOf="@+id/graph"
            app:layout_constraintStart_toStartOf="@+id/graph"
            app:layout_constraintTop_toTopOf="@+id/graph" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="@dimen/graph_height"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/margin_start_graph"
            android:layout_marginBottom="@dimen/margin_bottom_graph"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/day_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/day_btn"
            style="@style/CustomChoicePeriodButton"
            android:text="@string/d"
            app:layout_constraintBottom_toTopOf="@+id/buy_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/week_btn"
            style="@style/CustomChoicePeriodButton"
            android:text="@string/w"
            app:layout_constraintBottom_toTopOf="@+id/buy_btn"
            app:layout_constraintEnd_toStartOf="@+id/month_btn"
            app:layout_constraintStart_toEndOf="@+id/day_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/month_btn"
            style="@style/CustomChoicePeriodButton"
            android:text="@string/m"
            app:layout_constraintBottom_toTopOf="@+id/buy_btn"
            app:layout_constraintEnd_toStartOf="@id/year_btn"
            app:layout_constraintStart_toEndOf="@+id/week_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/year_btn"
            style="@style/CustomChoicePeriodButton"
            android:text="@string/y"
            app:layout_constraintBottom_toTopOf="@+id/buy_btn"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buy_btn"
            style="@style/CustomBuyButton"
            android:layout_marginBottom="@dimen/margin_bottom_buy_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/graph"
            app:layout_constraintStart_toStartOf="@id/graph"
            tools:text="Buy" />

        <ProgressBar
            android:id="@+id/loading_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/buy_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/retry"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/buy_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

